Bug 287254 - When you add a new add_executable in the CMakeLists.txt it does not appear as a Project Target in the launch configuration until you reload the project.
Summary: When you add a new add_executable in the CMakeLists.txt it does not appear as...
Status: RESOLVED FIXED
Alias: None
Product: kdevelop
Classification: Applications
Component: Build tools: CMake (other bugs)
Version First Reported In: git master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 4.2.3
Assignee: kdevelop-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-22 13:08 UTC by David
Modified: 2012-06-20 01:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David 2011-11-22 13:08:07 UTC
Version:           git master (using Devel) 
OS:                Linux

When you add a new add_executable in the CMakeLists.txt it does not appear as a Project Target in the launch configuration until you reload the project.

Reproducible: Always

Steps to Reproduce:
Add a new add_executable and then go try to add it as a launch target in "run -> configure launches".

Actual Results:  
The new executable is not in the list.

Expected Results:  
The new executable should be in the list.
Comment 1 David 2011-11-28 16:18:25 UTC
This happens not only if you actually add a new executable to the CMakeLists.txt, but also if you have a conditional that you enable through the KDevelop CMake interface that enables an add_executable line that is already present.
Comment 2 Aleix Pol 2011-12-02 16:54:09 UTC
I'm sorry but I can't reproduce it. Are you running master? 4.2?
Comment 3 David 2012-02-01 16:24:57 UTC
I just reproduced it again. With the 'Develop' branch of this repository:
https://github.com/daviddoria/PatchBasedInpainting

I checked it out, and opened it in KDevelop. The first time I hit 'build', nothing happens (correctly, because nothing is enabled to build by default). Then I go into the project options and check the "Tests" CMake option. When I build now, the tests build correctly. However, when I go to Run->Launch Configurations, there are no items in the executables list to select!
Comment 4 Aleix Pol 2012-02-12 16:11:05 UTC
If you re-open KDevelop, they show right? I get some launchers at least...
Comment 5 David 2012-02-12 16:57:49 UTC
Sure, either reopening KDevelop or reopening the project makes them appear.
Comment 6 Aleix Pol 2012-06-20 01:35:30 UTC
Git commit b58a9926a0cf274d02a1c94545ab3adb4843c4bf by Aleix Pol.
Committed on 20/06/2012 at 03:34.
Pushed by apol into branch '4.3'.

Make sure the "modified" signals from the fs are received.

For some reason, KDirWatch was signaling the modified CMakeCache.txt
files as "created". Listen to that

M  +1    -0    projectmanagers/cmake/cmakemanager.cpp

http://commits.kde.org/kdevelop/b58a9926a0cf274d02a1c94545ab3adb4843c4bf
Comment 7 Aleix Pol 2012-06-20 01:35:31 UTC
Git commit 5c50e4501d844ae6e72dc24b6654c4a6f27df931 by Aleix Pol.
Committed on 20/06/2012 at 03:34.
Pushed by apol into branch 'master'.

Make sure the "modified" signals from the fs are received.

For some reason, KDirWatch was signaling the modified CMakeCache.txt
files as "created". Listen to that

M  +1    -0    projectmanagers/cmake/cmakemanager.cpp

http://commits.kde.org/kdevelop/5c50e4501d844ae6e72dc24b6654c4a6f27df931