Make sure the "modified" signals from the fs are received.

For some reason, KDirWatch was signaling the modified CMakeCache.txt
files as "created". Listen to that

BUG: 287254